Исправлены пути к файлам и обновлен навбар с иконками

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
                 <div class="nav-item">Whitepaper</div>
                 <div class="nav-item">Roadmap</div>
                 <div class="nav-item">Leaderboard</div>
-                <div class="nav-icon discord-icon">
-                    <div class="discord-icon-inner1"></div>
-                    <div class="discord-icon-inner2"></div>
+                <div class="nav-icon">
+                    <img src="public/images/DS.png" alt="DS" class="icon-img">
                 </div>
-                <div class="nav-icon twitter-icon">
-                    <div class="twitter-icon-inner"></div>
+                <div class="nav-icon">
+                    <img src="img/twitter-x.svg" alt="Twitter X" class="icon-img">
                 </div>
-                <div class="nav-icon telegram-icon">
-                    <div class="telegram-icon-inner"></div>
+                <div class="nav-icon">
+                    <img src="public/images/fi-11823292.svg" alt="Telegram" class="icon-img">
                 </div>
             </div>
         </nav>
