Добавлена страница голосования и ссылки на неё с главной страницы

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="frame">
         <nav class="navbar">
             <div class="navbar-items">
-                <div class="nav-item">Rules</div>
-                <div class="nav-item">Rewards</div>
-                <div class="nav-item">Votings</div>
-                <div class="nav-item">Whitepaper</div>
-                <div class="nav-item">Roadmap</div>
-                <div class="nav-item">Leaderboard</div>
+                <div class="nav-item"><a href="index.html">Rules</a></div>
+                <div class="nav-item"><a href="index.html">Rewards</a></div>
+                <div class="nav-item"><a href="voting.html">Votings</a></div>
+                <div class="nav-item"><a href="index.html">Whitepaper</a></div>
+                <div class="nav-item"><a href="index.html">Roadmap</a></div>
+                <div class="nav-item"><a href="index.html">Leaderboard</a></div>
                 <div class="nav-icon">
                     <img src="public/images/DS.png" alt="DS" class="icon-img">
                 </div>
@@ -33,7 +33,7 @@
             <img src="public/images/tg-image-35710798862.svg" class="tg-image">
             <h1 class="main-title">Where Politics<br>Becomes the Game.</h1>
             <p class="subtitle">A Web3 strategy game where you compete in a civic arena<br>by making predictions on political outcomes.</p>
-            <button class="enter-button">Enter the Arena</button>
+            <button class="enter-button" onclick="window.location.href='voting.html'">Enter the Arena</button>
             
             <div class="features-container">
                 <div class="feature-card">
@@ -45,7 +45,7 @@
                         <div class="card-content">
                             <h3 class="card-title">Predict Real-World Politics</h3>
                             <p class="card-text">Forecast elections, laws, and events. Stake $MEMO or card power to play.</p>
-                            <button class="card-button">Start Voting</button>
+                            <a href="voting.html" class="card-button">Start Voting</a>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                         <div class="card-content">
                             <h3 class="card-title">Earn Dynamic NFT Cards</h3>
                             <p class="card-text">Win evolving NFT cards tied to real-world outcomes. Trade or level them up.</p>
-                            <button class="card-button">Card Library</button>
+                            <a href="voting.html" class="card-button">Card Library</a>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         <div class="card-content">
                             <h3 class="card-title">Compete in the Arena</h3>
                             <p class="card-text">Battle with your deck, join factions, and climb the leaderboard.</p>
-                            <button class="card-button">Enter the Arena</button>
+                            <a href="voting.html" class="card-button">Enter the Arena</a>
                         </div>
                     </div>
                 </div>
