--- a/vote.html
+++ b/vote.html
@@ -28,6 +28,11 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
+                    <a class="px-1 w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li data-mobile-disable class="">
                     <a class="px-1 w-full" href="#">
                         Rules
                     </a>
@@ -85,6 +90,11 @@
                 Close
             </button>
             <ul class="divide-y divide-white/10">
+                <li class="">
+                    <a class="px-1 py-4 block w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
                 <li class="">
                     <a class="px-1 py-4 block w-full" href="#">
                         Rules
