Добавлена ссылка на Telegram канал

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
                         <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
@@ -120,9 +120,9 @@
             <img src="public/images/tg-image-35710798862.svg" class=" w-96 h-72 object-cover mx-auto">
             <h1 class=" text-5xl md:text-[4.5rem] leading-none text-center font-light">Where Politics<br> Becomes the Game.</h1>
             <h2 class=" max-md:text-xl max-w-[28rem] text-center mt-4 mx-auto">A Web3 strategy game where you compete in a civic arena by making predictions on political outcomes.</h2>
-            <button class=" max-md:text-xl font-semibold text-sm py-2.5 px-5 bg-[#6938EF] rounded-lg mx-auto block mt-6">
+            <a href="vote.html" class=" max-md:text-xl font-semibold text-sm py-2.5 px-5 bg-[#6938EF] rounded-lg mx-auto block mt-6 w-fit">
                 Enter the Arena
-            </button>
+            </a>
         </div>
     </section>
     <section class=" ">
@@ -135,9 +135,9 @@
                 <div class=" relative z-10">
                     <p class=" mt-4 text-2xl md:text-xl">Predict Real-World Politics</p>
                     <p class=" max-md:text-xl mt-3">Forecast elections, laws, and events. Stake $MEMO or card power to play.</p>
-                    <button class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
+                    <a href="vote.html" class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6 w-fit">
                         Start Voting
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="p-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
@@ -161,9 +161,9 @@
                 <div class=" relative z-10">
                     <p class=" mt-4 text-2xl md:text-xl">Compete in the Arena</p>
                     <p class=" max-md:text-xl mt-3">Battle with your deck, join factions, and climb the leaderboard.</p>
-                    <button class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
+                    <a href="vote.html" class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6 w-fit">
                         Enter the Arena
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
