Добавлена ссылка на X (Twitter)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
                         <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
