--- a/winner.html
+++ b/winner.html
@@ -29,6 +29,11 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
+                    <a class="px-1 w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li data-mobile-disable class="">
                     <a class="px-1 w-full" href="#">
                         Rules
                     </a>
@@ -64,12 +69,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
                         <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
                         <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
@@ -86,6 +91,11 @@
                 Close
             </button>
             <ul class="divide-y divide-white/10">
+                <li class="">
+                    <a class="px-1 py-4 block w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
                 <li class="">
                     <a class="px-1 py-4 block w-full" href="#">
                         Rules
