Обновлены ссылки на Whitepaper во всех навбарах

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
                         Whitepaper
                     </a>
                 </li>
@@ -107,7 +107,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
                         Whitepaper
                     </a>
                 </li>
