--- a/vote.html
+++ b/vote.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
                         Whitepaper
                     </a>
                 </li>
@@ -68,12 +68,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
                         <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
                         <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
@@ -111,7 +111,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
                         Whitepaper
                     </a>
                 </li>
