fix: update whitepaper links to external URL in old templates

--- a/old-voting.html
+++ b/old-voting.html
@@ -24,7 +24,7 @@
                 <div class="nav-item"><a href="index.html">Rules</a></div>
                 <div class="nav-item"><a href="index.html">Rewards</a></div>
                 <div class="nav-item active"><a href="voting.html">Votings</a></div>
-                <div class="nav-item"><a href="index.html">Whitepaper</a></div>
+                <div class="nav-item"><a href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">Whitepaper</a></div>
                 <div class="nav-item"><a href="index.html">Roadmap</a></div>
                 <div class="nav-item"><a href="index.html">Leaderboard</a></div>
                 <div class="nav-icon">
