fix: improve mobile menu functionality and social links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://discord.gg/memeotica" target="_blank" rel="noopener noreferrer">
                         <img src="public/images/DS.png" alt="DS" class="w-5 h-5">
                     </a>
                 </li>
@@ -228,5 +228,6 @@
     </section>
 
     <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/mobile-menu.js"></script>
 </body>
 </html> 
