fix: correct social media icons order and links in all navbars

--- a/old-voting.html
+++ b/old-voting.html
@@ -28,13 +28,19 @@
                 <div class="nav-item"><a href="index.html">Roadmap</a></div>
                 <div class="nav-item"><a href="index.html">Leaderboard</a></div>
                 <div class="nav-icon">
-                    <img src="public/images/DS.png" alt="DS" class="icon-img">
+                    <a href="https://discord.gg/memeotica" target="_blank" rel="noopener noreferrer">
+                        <img src="public/images/DS.png" alt="Discord" class="icon-img">
+                    </a>
                 </div>
                 <div class="nav-icon">
-                    <img src="img/twitter-x.svg" alt="Twitter X" class="icon-img">
+                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
+                        <img src="img/twitter-x.svg" alt="Twitter X" class="icon-img">
+                    </a>
                 </div>
                 <div class="nav-icon">
-                    <img src="public/images/fi-11823292.svg" alt="Telegram" class="icon-img">
+                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
+                        <img src="public/images/fi-11823292.svg" alt="Telegram" class="icon-img">
+                    </a>
                 </div>
             </div>
         </nav>
