--- a/vote.html
+++ b/vote.html
@@ -63,18 +63,18 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <img src="public/images/DS.png" alt="DS" class="w-5 h-5">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
+                    <a href="https://discord.gg/memeotica" target="_blank" rel="noopener noreferrer">
+                        <img src="public/images/DS.png" alt="Discord" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
                     <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
                         <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
+                        <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
             </ul>
