fix: update DS.png link to dexscreener.com in all navbars

--- a/old-index.html
+++ b/old-index.html
@@ -18,8 +18,8 @@
                 <div class="nav-item"><a href="index.html">Roadmap</a></div>
                 <div class="nav-item"><a href="index.html">Leaderboard</a></div>
                 <div class="nav-icon">
-                    <a href="https://discord.gg/memeotica" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/DS.png" alt="Discord" class="icon-img">
+                    <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
+                        <img src="public/images/DS.png" alt="DexScreener" class="icon-img">
                     </a>
                 </div>
                 <div class="nav-icon">
