--- a/vote.html
+++ b/vote.html
@@ -63,8 +63,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://discord.gg/memeotica" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/DS.png" alt="Discord" class="w-5 h-5">
+                    <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
+                        <img src="public/images/DS.png" alt="DexScreener" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
