Исправлена страница лидерборда: правильное отображение кубков, выравнивание таблицы и стили нумерации

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -42,25 +42,11 @@
 
         <!-- Top 3 Players -->
         <div class="top-players">
-            <!-- Silver (2nd place) -->
-            <div class="player-card">
-                <div class="card-content">
-                    <div class="nft-image">
-                        <img src="/public/images/silver.png" alt="Silver NFT">
-                    </div>
-                    <div class="player-info">
-                        <span class="wallet silver">Bqp...ad3</span>
-                        <span class="score">53 417</span>
-                        <p>Every season event will get extra lootbox and coins airdrop</p>
-                    </div>
-                </div>
-            </div>
-
             <!-- Gold (1st place) -->
             <div class="player-card">
                 <div class="card-content">
                     <div class="nft-image">
-                        <img src="/public/images/gold.png" alt="Gold NFT">
+                        <img src="public/images/image-42.png" alt="Gold Trophy">
                     </div>
                     <div class="player-info">
                         <span class="wallet gold">9c2...xCV</span>
@@ -70,11 +56,25 @@
                 </div>
             </div>
 
+            <!-- Silver (2nd place) -->
+            <div class="player-card">
+                <div class="card-content">
+                    <div class="nft-image">
+                        <img src="public/images/image-43.png" alt="Silver Trophy">
+                    </div>
+                    <div class="player-info">
+                        <span class="wallet silver">Bqp...ad3</span>
+                        <span class="score">53 417</span>
+                        <p>Every season event will get extra lootbox and coins airdrop</p>
+                    </div>
+                </div>
+            </div>
+
             <!-- Bronze (3rd place) -->
             <div class="player-card">
                 <div class="card-content">
                     <div class="nft-image">
-                        <img src="/public/images/bronze.png" alt="Bronze NFT">
+                        <img src="public/images/image-44.png" alt="Bronze Trophy">
                     </div>
                     <div class="player-info">
                         <span class="wallet bronze">EBU...vcF</span>
@@ -91,7 +91,7 @@
             <div class="table-headers">
                 <span>Wallet</span>
                 <span>Votes</span>
-                <span>Hold amount</span>
+                <span>Hold ammount</span>
                 <span>Cards</span>
                 <span>Battle wins</span>
                 <span>Total</span>
