--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank" rel="noopener noreferrer">
                         Roadmap
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="leaderboard.html">
                         Leaderboard
                     </a>
                 </li>
@@ -112,12 +112,12 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank" rel="noopener noreferrer">
                         Roadmap
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="leaderboard.html">
                         Leaderboard
                     </a>
                 </li>
