--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,7 +20,7 @@
             <li><a href="#">Rewards</a></li>
             <li><a href="vote.html">Votings</a></li>
             <li><a href="https://memeotica.gitbook.io/memoticfun/" target="_blank">Whitepaper</a></li>
-            <li><a href="#">Roadmap</a></li>
+            <li><a href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank">Roadmap</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
             <li>
                 <div class="social-icons">
