Добавлены иконки соцсетей в навбар на странице лидерборда

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,11 +23,19 @@
             <li><a href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank">Roadmap</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
             <li>
-                <div class="social-icons">
-                    <a href="#"><div class="icon icon-1"></div></a>
-                    <a href="#"><div class="icon icon-2"></div></a>
-                    <a href="#"><div class="icon icon-3"></div></a>
-                </div>
+                <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
+                    <img src="public/images/DS.png" alt="DexScreener" class="w-5 h-5">
+                </a>
+            </li>
+            <li>
+                <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
+                    <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
+                </a>
+            </li>
+            <li>
+                <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
+                    <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
+                </a>
             </li>
         </ul>
     </nav>
